--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@ async function loadData() {
 
   indicator.classList.remove('show');
   indicator.textContent = 'saved ✓';
+  runMonthTransition();
 }
 
 let saveTimer;
